# konnector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
configs/: example.yaml  postgres.tcp.yaml  root.yaml
debian/: changelog  control  copyright  konnector.env.example  konnector.service  postinst  postrm  prerm  rules
scripts/: install.ps1  install.sh
src/: access_control.rs  acme.rs  acme_challenge.rs  application.rs  cache_policy.rs  cli.rs  config_watcher.rs  configs.rs  default_site.rs  domain_routing.rs  env_file.rs  error_pages.rs  file_log.rs  forwarding.rs  health_check.rs  http3.rs  internal_routes.rs  main.rs  path_rewrite.rs  paths.rs  platform_ops.rs  redirects.rs  request_logging.rs  ssl.rs  ssl_watcher.rs  tcp_proxy.rs  upstreams.rs  validation.rs  websocket.rs  windows_svc.rs
src/proxy/: handler.rs  mod.rs  routing.rs  runtime.rs
windows/: konnector.env.example
