[package]
name = "konnector"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[dependencies]
async-trait = "0.1"
bytes = "1"
env_logger = "0.11"
log = "0.4"
notify = "8.2"
once_cell = "1"
openssl = "0.10"
libc = "0.2"
pingora = { version = "0.8.1", features = ["lb", "cache", "openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2", features = ["json"] }
url = "2"
