[package]
name = "konnector"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[dependencies]
async-trait = "0.1"
bytes = "1"
env_logger = "0.11"
futures = "0.3"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
log = "0.4"
notify = "8.2"
once_cell = "1"
openssl = { version = "0.10", features = ["vendored"] }
instant-acme = { version = "0.8", default-features = false, features = ["hyper-rustls", "ring", "rcgen"] }
pingora = { version = "0.8.1", features = ["lb", "cache", "openssl"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt"] }
ureq = { version = "2", features = ["json"] }
url = "2"
webpki-roots = "0.26"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
